# Marketingfront

./: .replit  hash-password.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
attached_assets/: Pasted--venv-PS-D-pc-Ai-TaskTrackPro-TaskTrackPro-backend-python-manage-py-makemigrations-api-Traceback-1744644877595.txt  Pasted-Build-me-a-full-stack-web-application-using-Django-backend-React-frontend-and-PostgreSQL-data-1744617434575.txt  Pasted-Traceback-most-recent-call-last-File-D-pc-Ai-TaskTrackPro-TaskTrackPro-backend-manage-py-l-1744644468092.txt  Pasted-Traceback-most-recent-call-last-File-D-pc-Ai-TaskTrackPro-TaskTrackPro-backend-manage-py-l-1744645169161.txt
client/src/: App.tsx
client/src/components/: protected-route.tsx
client/src/components/layouts/: auth-layout.tsx
client/src/components/ui/: csv-upload.tsx  horizontal-stepper.tsx  insight-card.tsx  metric-card.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: queryClient.ts
client/src/pages/: api-configuration.tsx  dashboard.tsx  home-page.tsx  reports.tsx  upload-csv.tsx  user-management.tsx
shared/: schema.ts
src/: App.tsx
src/components/layouts/: dashboard-layout.tsx  header.tsx  sidebar.tsx
src/components/ui/: csv-upload.tsx  date-range-picker.tsx  index.ts  stepper.tsx  theme-toggle.tsx
src/lib/: protected-route.tsx
src/pages/: auth-page.tsx  home-page.tsx  reports.tsx  settings.tsx
uploads/: file-1744636703282-435625649.csv
